--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         placeholder="What is your name?">
         <button>Log In</button>
       </form>
-
+      <h1 id="greeting"></h1>
     <script src="app.js"></script>
   </body>
 </html>
