--- a/index.html
+++ b/index.html
@@ -25,5 +25,7 @@
     <script src="js/greetings.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/verses.js"></script>
+    <script src="js/background.js"></script>
+
   </body>
 </html>
