--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     <script src="js/verses.js"></script>
     <script src="js/background.js"></script>
     <script src="js/todo.js"></script>
+    <script src="js/weather.js"></script>
+
     
   </body>
 </html>
