--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
     <div id="verse">
       <span></span>
       <span></span>
+    </div> 
+    <div id="weather">
+      <span></span>
+      <span></span>
     </div>
     <script src="js/greetings.js"></script>
     <script src="js/clock.js"></script>
